testing and containerization

--- a/mqtt_broker/Dockerfile
+++ b/mqtt_broker/Dockerfile
@@ -1,8 +1,12 @@
+# Official mosquitto bropker image as base
 FROM eclipse-mosquitto
 
-COPY config/mosquitto.conf /mosquitto/config/mosquitto.conf
-
-EXPOSE 1883:1883
-EXPOSE 9001:9001 
-
 LABEL maintainer="Nimesh Nagar"
+
+# copying config file in container
+COPY config/mosquitto.conf /mosquitto/config/mosquitto.conf
+COPY log/mosquitto.log /mosquitto/log/mosquitto.log
+
+# exposing ports for mqtt and websockets
+EXPOSE 1883
+EXPOSE 9001
