--- a/mqtt_broker/config/mosquitto.conf
+++ b/mqtt_broker/config/mosquitto.conf
@@ -1,2 +1,8 @@
 listener 1883 
 allow_anonymous true
+
+# WebSocket listener
+listener 9001
+protocol websockets
+
+log_dest file /mosquitto/log/mosquitto.log
